# coderag

./: .gitignore  README.md  pyproject.toml  requirements.txt
coderag/: __init__.py  config.py
coderag/indexer/: code_parser.py  embedder.py  repository.py
coderag/storage/: base.py  chromadb.py  pinecone.py
coderag/utils/: generate_summary.py
docs/: guide.md  hierarchical_chunking.md  hyde_reranking.md  vector_stores.md
examples/: basic_usage.py  hierarchical_chunking_example.py  hyde_reranking_example.py  pinecone_example.py  simple_hierarchical.py
