[project]
name = "coderag"
version = "0.0.1"
description = "A plug and play python package for implementing Code Rag in your application"
authors = [
    {name = "Mohwit",email = "mohwits@gmail.com"}
]
license = {text = "Apache-2.0 License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
